--- a/panel/pink-wool.css
+++ b/panel/pink-wool.css
@@ -5,7 +5,7 @@ body {
 	font-family: Arial,Helvetica,"Liberation Sans",sans-serif;
 	font-size: 16px;
 	margin: 2em auto;
-	max-width: 800px;
+	max-width: 840px;
 }
 h1 {
 	font-family: "Lucida Console",monospace;
@@ -14,13 +14,22 @@ a {
 	text-decoration: none;
 	color: #0623c4;
 }
-footer ul {
+footer {
 	font-size: 12px;
-	list-style-type: none;
 	padding: 0px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 }
-footer ul li {
-	text-align: left;
-	display: inline-block;
-	width: 33%;
+.gridwrap {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: minmax(240px, auto);
+}
+#status li:nth-child(3) {
+	font-weight: bold;
+}
+#helpr {
+	background: rgba(219, 23, 152, 0.1) none repeat scroll 0% 0%;
+	border-radius: 16px;
+        border: 1px solid rgb(176, 115, 181);
 }
